Fix styling and dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,6 +20,6 @@ html {
 }
 @media (prefers-color-scheme: dark) {
   html {
-    background-color: #030712;
+    background-color: #111827;
   }
 }
